Use release tag

--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -56,9 +56,17 @@ jobs:
             changed=true
           fi
 
+          llvm_backend_version="v$(cat deps/llvm-backend_release)"
+          cd llvm-backend/src/main/native/llvm-backend
+          git checkout ${llvm_backend_version}
+          cd -
+          sed -i 's!      url = "github:runtimeverification/llvm-backend/.*";!      url = "github:runtimeverification/llvm-backend/'"${llvm_backend_version}"'";!' flake.nix
+          if git add flake.nix llvm-backend/src/main/native/llvm-backend && git commit -m "flake.nix, llvm-backend/src/main/native/llvm-backend: update to version ${llvm_backend_version}"; then
+            changed=true
+          fi
+
           nix flake update
-          GC_DONT_GC=1 nix run .#update-from-submodules
-          if git add flake.nix flake.lock && git commit -m 'flake.nix, flake.lock: update'; then
+          if git add flake.lock && git commit -m 'flake.lock: update'; then
             changed=true
           fi
 
