--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,7 +101,7 @@ jobs:
           distro: jammy
           llvm: 15
           pkg-name: kframework_amd64_ubuntu_jammy.deb
-          build-package: package/debian/build-package jammy
+          build-package: package/debian/build-package jammy kframework
           test-package: package/debian/test-package
       - name: 'Upload Package to Release'
         env:
