follow kore clean-up (removing attribute print), fix update-results in 1 test

--- a/k-distribution/tests/regression-new/issue-3672-debugParse/Makefile
+++ b/k-distribution/tests/regression-new/issue-3672-debugParse/Makefile
@@ -6,3 +6,5 @@ PIPEFAIL=
 CHECK=$(CONSIDER_ERRORS) $(REMOVE_PATHS) | diff -
 
 include ../../../include/kframework/ktest.mak
+
+update-results: CHECK=$(CONSIDER_ERRORS) $(REMOVE_PATHS) >
