--- a/pyk/src/tests/unit/test-data/pyk_toml_test.toml
+++ b/pyk/src/tests/unit/test-data/pyk_toml_test.toml
@@ -1,5 +1,13 @@
 [coverage]
 output = "default-file"
+definition = "/tmp"
+
+[print]
+input = "kast-json"
+no-minimize = true
+
+[prove-legacy]
+kArgs = ["arg 1","args 2"]
 
 [coverage.a_profile]
 verbose = true    
