--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: kframework-src.tar.gz
-          path: kframework-src.tar.gz
+          path: ../kframework-src.tar.gz
           if-no-files-found: error
           retention-days: 1
 
@@ -85,6 +85,11 @@ jobs:
           # https://github.com/actions/runner-images/issues/2322
           brew list -1 | grep python | while read formula; do brew unlink $formula; brew link --overwrite $formula; done
 
+      - name: 'Download K package from the Summary Page'
+        uses: actions/download-artifact@v4
+        with:
+          name: kframework-src.tar.gz
+
       - name: Build brew bottle
         id: build
         env:
@@ -97,7 +102,8 @@ jobs:
           PACKAGE=kframework
           VERSION=$(cat kframework/package/version)
           ROOT_URL='https://github.com/runtimeverification/k/releases/download'
-          wget "$ROOT_URL/v${VERSION}/kframework-${VERSION}-src.tar.gz"
+          # wget "$ROOT_URL/v${VERSION}/kframework-${VERSION}-src.tar.gz"
+          mv kframework-src.tar.gz "kframework-${VERSION}-src.tar.gz"
           cd homebrew-k
           ../kframework/package/macos/brew-update-to-local ${PACKAGE} ${VERSION}
           git commit Formula/$PACKAGE.rb -m "Update ${PACKAGE} to ${VERSION}: part 1"
