--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -243,7 +243,7 @@ jobs:
           k-deb-path: kframework.deb
       - name: 'Run profiling'
         run: |
-          docker exec -u user k-pyk-profile-${{ github.sha }} make profile PROF_ARGS='--maxfail=1 -n4'
+          docker exec -u user k-pyk-profile-${{ github.sha }} make profile PROF_ARGS=-n4
           docker exec -u user k-pyk-profile-${{ github.sha }} /bin/bash -c 'find /tmp/pytest-of-user/pytest-current/ -type f -name "*.prof" | sort | xargs tail -n +1'
       - name: 'Tear down Docker'
         if: always()
