Create `.nojekyll` dynamically
It is easier to create the file than to copy it.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -471,6 +471,7 @@ jobs:
           rm -rf $(find . -maxdepth 1 -not -name public_content -a -not -name .git -a -not -path . -a -not -path .. -a -not -name CNAME)
           mv public_content/* ./
           rm -rf public_content
+          touch .nojekyll
       - name: 'Push gh-pages branch'
         working-directory: gh-pages
         run: |
