Rerun on push to branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: 'Release'
 run-name: K Framework Release ${{ github.ref_name }}
 on:
-  pull_request:
+  push:
     branches:
       - feature/pyk-pypi-publishing
   release:
