Updating README for Pyk, adding to publsihing package, resolving packaging twine error standards for PyPi to publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -374,7 +374,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-poetry-
       
-      - name: Build Pyk Whl
+      - name: Build Pyk
         working-directory: pyk
         run: |
           make build
