--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -5,10 +5,11 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry]
 name = "pyk"
 version = "7.0.41"
-description = ""
+description = "Python Tool for K"
 authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
 ]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
