Attempt to run with LLVM package

--- a/.github/actions/with-k-docker/Dockerfile
+++ b/.github/actions/with-k-docker/Dockerfile
@@ -1,18 +1,25 @@
-FROM ubuntu:jammy
+ARG BASE_OS
+ARG BASE_DISTRO
+
+FROM ${BASE_OS}:${BASE_DISTRO}
 
 ARG K_DEB_PATH
+ARG LLVM_BACKEND_DEB_PATH
 
 COPY ${K_DEB_PATH} /kframework.deb
+COPY ${LLVM_BACKEND_DEB_PATH} /llvm-backend.deb
 
-RUN    apt-get -y update  \
-    && apt-get -y install \
-         curl             \
-         graphviz         \
-         make             \
-         python3.10-dev   \
-         /kframework.deb  \
+RUN    apt-get -y update    \
+    && apt-get -y install   \
+         curl               \
+         graphviz           \
+         make               \
+         python3.10-dev     \
+         /llvm-backend.deb  \
+         /kframework.deb    \
     && apt-get -y clean
 
+RUN rm /llvm-backend.deb
 RUN rm /kframework.deb
 
 ARG USER_ID=9876
