Specify user is __token__ and let oidc get the token, accodring to https://github.com/pypa/gh-action-pypi-publish/issues/138#issuecomment-1492800471

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -385,6 +385,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.8.14
         with:
           packages-dir: pyk/dist
+          user: __token__
 
   # release:
   #   name: 'Publish Release'
