--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "pyk"
+name = "runtimeverification-pyk"
 version = "7.0.41"
 description = "Python Tool for K"
 authors = [
