--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ run-name: K Framework Release ${{ github.ref_name }}
 on:
   push:
     branches:
-      - feature/pyk-pypi-publishing
+      - feature/pykframework-pypi-publishing
   release:
     types:
       - prereleased
@@ -129,8 +129,8 @@ jobs:
   #         docker exec -t k-package-docker-test-jammy-${GITHUB_SHA} bash -c 'cd ~ && echo "module TEST imports BOOL endmodule" > test.k'
   #         docker exec -t k-package-docker-test-jammy-${GITHUB_SHA} bash -c 'cd ~ && kompile test.k --backend llvm'
   #         docker exec -t k-package-docker-test-jammy-${GITHUB_SHA} bash -c 'cd ~ && kompile test.k --backend haskell'
-  #         docker exec -t k-package-docker-test-jammy-${GITHUB_SHA} bash -c 'cd ~ && pyk kompile test.k --backend llvm'
-  #         docker exec -t k-package-docker-test-jammy-${GITHUB_SHA} bash -c 'cd ~ && pyk kompile test.k --backend haskell'
+  #         docker exec -t k-package-docker-test-jammy-${GITHUB_SHA} bash -c 'cd ~ && pykframework kompile test.k --backend llvm'
+  #         docker exec -t k-package-docker-test-jammy-${GITHUB_SHA} bash -c 'cd ~ && pykframework kompile test.k --backend haskell'
   #         docker image push ${DOCKERHUB_REPO}:${version_tag}
   #     - name: 'Clean up Docker Container'
   #       if: always()
@@ -347,8 +347,8 @@ jobs:
   #           const { owner, repo } = context.repo
   #           await github.rest.repos.deleteRelease({ owner, repo, release_id: ${{ needs.set-release-id.outputs.release_id }} })
 
-  pyk-publish:
-    name: 'Publish Pyk'
+  pykframework-publish:
+    name: 'Publish pykframework'
     runs-on: [self-hosted, linux, flyweight]
     environment: production
     permissions:
@@ -372,19 +372,19 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/poetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('pyk/pyproject.toml') }}
+          key: ${{ runner.os }}-poetry-${{ hashFiles('pykframework/pyproject.toml') }}
           restore-keys: |
             ${{ runner.os }}-poetry-
       
-      - name: Build Pyk
-        working-directory: pykframework
+      - name: Build pykframework
+        working-directory: pykframeworkframework
         run: |
           make build
 
-      - name: Publish Pyk to PypI
+      - name: Publish pykframework to PypI
         uses: pypa/gh-action-pypi-publish@v1.8.14
         with:
-          packages-dir: pyk/dist
+          packages-dir: pykframework/dist
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
 
@@ -507,11 +507,11 @@ jobs:
   #         npm run build-sitemap
   #         cd -
   #         mv web/public_content ./
-  #         cd pyk
+  #         cd pykframework
   #         make docs
   #         cd -
-  #         mkdir public_content/pyk
-  #         cp -r pyk/docs/build/html/* public_content/pyk
+  #         mkdir public_content/pykframework
+  #         cp -r pykframework/docs/build/html/* public_content/pykframework
   #         rm -rf $(find . -maxdepth 1 -not -name public_content -a -not -name .git -a -not -path . -a -not -path .. -a -not -name CNAME)
   #         mv public_content/* ./
   #         rm -rf public_content
