Move docker run step to separate stage

--- a/.github/actions/with-k-docker/action.yml
+++ b/.github/actions/with-k-docker/action.yml
@@ -13,11 +13,18 @@ inputs:
   os:
     description: 'OS to setup Docker for.'
     required: true
+    type: string
     default: ubuntu
   distro:
     description: 'Distribution to setup Docker for.'
     required: true
+    type: string
     default: jammy
+  run-container:
+    description: 'Run the K container automatically with default settings.'
+    required: true
+    type: boolean
+    default: true
 runs:
   using: 'composite'
   steps:
@@ -49,6 +56,15 @@ runs:
         --build-arg BASE_DISTRO=${BASE_DISTRO}                      \
         --build-arg K_DEB_PATH=${K_DEB_PATH}                        \
         --build-arg LLVM_BACKEND_DEB_PATH=${LLVM_BACKEND_DEB_PATH}
+
+  - name: 'Run Docker container'
+    shell: bash {0}
+    if: ${{ inputs.run-container == 'true' }}
+    run: |
+      set -euxo pipefail
+
+      CONTAINER_NAME=${{ inputs.container-name }}
+      TAG=runtimeverificationinc/${CONTAINER_NAME}
 
       docker run                 \
         --name ${CONTAINER_NAME} \
