--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -18,6 +18,7 @@ filelock = "^3.9.0"
 graphviz = "^0.20.1"
 psutil = "5.9.5"
 pybind11 = "^2.10.3"
+pytest = "*"
 textual = "^0.27.0"
 tomli = "^2.0.1"
 xdg-base-dirs = "^6.0.1"
@@ -39,7 +40,6 @@ pytest-mock = "*"
 pytest-timeout = "*"
 pytest-xdist = "*"
 pyupgrade = "*"
-sphinx = "*"
 types-psutil = "^5.9.5.10"
 
 [tool.poetry.scripts]
