Concretize on Ubuntu

--- a/.github/actions/with-k-docker/Dockerfile
+++ b/.github/actions/with-k-docker/Dockerfile
@@ -1,7 +1,6 @@
-ARG BASE_OS
 ARG BASE_DISTRO
 
-FROM ${BASE_OS}:${BASE_DISTRO}
+FROM ubuntu:${BASE_DISTRO}
 
 ARG K_DEB_PATH
 ARG LLVM_BACKEND_DEB_PATH
